--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.lo
 .*.swp
 .*.swo
+Makefile.in
 .deps
 .libs
 Makefile
@@ -60,3 +61,20 @@ autom4te.cache
 /testsuite/expect/globals.*
 /testsuite/expect/*.log*
 TAGS
+aclocal.m4
+auxdir/compile
+auxdir/config.guess
+auxdir/config.sub
+auxdir/depcomp
+auxdir/install-sh
+auxdir/libtool.m4
+auxdir/ltmain.sh
+auxdir/ltoptions.m4
+auxdir/ltsugar.m4
+auxdir/ltversion.m4
+auxdir/lt~obsolete.m4
+auxdir/missing
+auxdir/test-driver
+config.h.in
+configure
+src/api/full_version.map
