--- a/configure.ac
+++ b/configure.ac
@@ -91,6 +91,10 @@ AC_HEADER_SYS_WAIT
 AC_HEADER_TIME
 AC_HEADER_STDC
 
+dnl Check for custom dependencies for visionary-slurm
+AC_CHECK_HEADER(toml.h,                 [], AC_MSG_ERROR([Error: tomlc99 is needed for visionary-slurm plugins!]))
+AC_SEARCH_LIBS([toml_parse],    [toml], [], AC_MSG_ERROR([Error: tomlc99 is needed for visionary-slurm plugins!]))
+
 # Workaround for transition of autoconf/glibc issues in deprecation of the
 # definitions major, minor, makedev by sys/types.h vs sys/sysmacros.h
 old_CFLAGS=$CFLAGS
@@ -522,6 +526,7 @@ AC_CONFIG_FILES([Makefile
 		 src/plugins/job_container/none/Makefile
 		 src/plugins/job_submit/Makefile
 		 src/plugins/job_submit/all_partitions/Makefile
+		 src/plugins/job_submit/cerberus/Makefile
 		 src/plugins/job_submit/cray_aries/Makefile
 		 src/plugins/job_submit/defaults/Makefile
 		 src/plugins/job_submit/nmpm_custom_resource/Makefile
